deploy/k8s-lab/manifests/31-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qltrungtam
  namespace: qltrungtam
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 2m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: qltrungtam.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qltrungtam
                port:
                  number: 3000
